--- a/tracker.infrastructure/tracker.infrastructure.csproj
+++ b/tracker.infrastructure/tracker.infrastructure.csproj
@@ -52,6 +52,10 @@
     <Compile Include="Migrations\201804152104481_Initial.Designer.cs">
       <DependentUpon>201804152104481_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804202155449_AddUserDetails.cs" />
+    <Compile Include="Migrations\201804202155449_AddUserDetails.Designer.cs">
+      <DependentUpon>201804202155449_AddUserDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Repository.cs" />
@@ -71,6 +75,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201804152104481_Initial.resx">
       <DependentUpon>201804152104481_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804202155449_AddUserDetails.resx">
+      <DependentUpon>201804202155449_AddUserDetails.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
